tests/ui/issues/const-recover-semi-issue-151149.stderr
error: expected `;`, found `}`
  --> $DIR/const-recover-semi-issue-151149.rs:16:38
   |
LL |     const C: u8 = u8::const_default()
   |                                      ^ help: add `;` here
LL |     &C
LL | }
   | - unexpected token

error: expected `;`, found `}`
  --> $DIR/const-recover-semi-issue-151149.rs:22:9
   |
LL |      + 2
   |         ^ help: add `;` here
LL | }
   | - unexpected token

error: expected `;`, found `}`
  --> $DIR/const-recover-semi-issue-151149.rs:27:13
   |
LL |      + val()
   |             ^ help: add `;` here
LL | }
   | - unexpected token

error[E0308]: mismatched types
  --> $DIR/const-recover-semi-issue-151149.rs:15:19
   |
LL | const fn foo() -> &'static u8 {
   |          ---      ^^^^^^^^^^^ expected `&u8`, found `()`
   |          |
   |          implicitly returns `()` as its body has no tail or `return` expression

error[E0308]: mismatched types
  --> $DIR/const-recover-semi-issue-151149.rs:20:19
   |
LL | const fn bar() -> u8 {
   |          ---      ^^ expected `u8`, found `()`
   |          |
   |          implicitly returns `()` as its body has no tail or `return` expression

error[E0308]: mismatched types
  --> $DIR/const-recover-semi-issue-151149.rs:25:19
   |
LL | const fn baz() -> u8 {
   |          ---      ^^ expected `u8`, found `()`
   |          |
   |          implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
